--- a/Brutalgore.vcxproj
+++ b/Brutalgore.vcxproj
@@ -68,6 +68,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Gun.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
@@ -76,7 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Const.h" />
-    <ClInclude Include="include\GlobalVar.h" />
+    <ClInclude Include="include\Enemy.h" />
     <ClInclude Include="include\Gun.h" />
     <ClInclude Include="include\MainMenu.h" />
     <ClInclude Include="include\Player.h" />
