--- a/Brutalgore.vcxproj
+++ b/Brutalgore.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="Gun.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Missile.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerController.cpp" />
   </ItemGroup>
@@ -82,6 +83,7 @@
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\Gun.h" />
     <ClInclude Include="include\MainMenu.h" />
+    <ClInclude Include="include\Missile.h" />
     <ClInclude Include="include\Player.h" />
     <ClInclude Include="include\PlayerController.h" />
   </ItemGroup>
