--- a/Brutalgore.vcxproj.filters
+++ b/Brutalgore.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="include\Missile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
