--- a/Brutalgore.vcxproj.filters
+++ b/Brutalgore.vcxproj.filters
@@ -63,4 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="maps\map01.bgm">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
