unsupported settings and camera objets (code is elsewhere), camera follow player & various attempts. i push before break it

--- a/Brutalgore.vcxproj
+++ b/Brutalgore.vcxproj
@@ -68,6 +68,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Gun.cpp" />
@@ -75,8 +76,10 @@
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Missile.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Settings.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\Const.h" />
     <ClInclude Include="include\Enemy.h" />
     <ClInclude Include="include\Game.h" />
@@ -85,6 +88,7 @@
     <ClInclude Include="include\MainMenu.h" />
     <ClInclude Include="include\Missile.h" />
     <ClInclude Include="include\Player.h" />
+    <ClInclude Include="include\Settings.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="maps\map01.bgm" />
